temple page update

--- a/final-project/css/base.css
+++ b/final-project/css/base.css
@@ -490,3 +490,41 @@ footer {
 .footer2 p {
     text-align: center;
 }
+
+/******************** temple page ******************************************/
+.temple-grid {
+    max-width: 950px;
+    margin: 20px auto;
+}
+
+.cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+}
+
+.cards h2 {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: #1a1f23;
+    margin-bottom: 0;
+}
+
+.card section {
+    margin: 3px;
+    padding: 30px;
+    background-color: #91f3e64f;
+    border: 1px solid #0d0d0f3f;
+    display: block;
+    box-shadow: 0 0 10px #777;
+}
+
+.cards img {
+    margin: 1rem 0;
+    width: auto;
+    max-width: 320px;
+    border: 1px solid rgba(51, 51, 51, 0.041);
+}
+
+.cards section > p {
+    min-height: 10px;
+    margin-bottom: 0;
+}
